2006-02-17  Matthew Gregan  <kinetik@orcon.net.nz>

	* sqlite/*: Import SQLite 3.3.4.

2006-02-16  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* netsync.cc (handle_new_connection): Netxx::Address.get_name()
	returns NULL every now and then. if so, continue with "" instead

	* sqlite/parse.c: move #line under all #include directives so
	the compiler can't be confused by it.

2006-02-14  Richard Levitte  <richard@levitte.org>

	* Makefile.am (htmldir): Add variables so monotone.html is created
	and installed automatically.
	This is prompted by debian/monotone.html, which indicates
	monotone.html should be available.

	* netsync.cc (serve_connections): Correct spelling.

2006-02-13  Matthew Gregan  <kinetik@orcon.net.nz>

	* sanity.cc (sanity::dump_buffer): Fix a SEGV when we're in an
	error unwind and about to ask the user to mail us the crash
	log--we must use FL() rather than F() here, since by the time this
	is called we can't rely on the i18n infrastructure being alive.

2006-02-12  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (serve_connections): Revert garbage that I
	accidentally checked in last time...

2006-02-12  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Add things done since last time I did this...

2006-02-12  Matthew Gregan  <kinetik@orcon.net.nz>

	* {cset,paths,revision,roster,sanity,vocab}.{cc,hh}: GCC 4.1
	compile fixes.

2006-02-11  Richard Levitte  <richard@levitte.org>

	* NEWS: Removed my notice about netsync, as I just noticed it
	was already mentioned under Bugs:.

2006-02-11  Nathaniel Smith  <njs@pobox.com>

	* configure.ac, debian/changelog, monotone.spec:
	* win32/monotone.iss: Bump version to 0.26pre2.

2006-02-11  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Add mention of validate_commit_message.

2006-02-11  Blake Kaplan <mrbkap@gmail.com>

	* monotone.texi (Hooks): Added new subsection about validation
	hooks, and describe validate_commit_message in it.

	* std_hooks.lua (validate_commit_message): Change the second