@@ -230,11 +230,6 @@ function edit_comment(basetext, user_log_message)
 end
 
 
-function non_blocking_rng_ok()
-   return true
-end
-
-
 function persist_phrase_ok()
    return true
 end
